--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "deploy:surge": "surge",
-    "deploy:": "ng build --base-href ./ && npx angular-cli-ghpages --dir=dist",
+    "deploy:phpages": "ng build --base-href ./ && npx angular-cli-ghpages --dir=dist",
     "run:all": "node node_modules/@angular-architects/module-federation/src/server/mf-dev-server.js"
   },
   "dependencies": {
@@ -39,6 +39,7 @@
     "perfect-scrollbar": "1.5.5",
     "quill": "1.3.7",
     "rxjs": "7.8.1",
+    "surge": "^0.23.1",
     "tslib": "2.5.2",
     "zone.js": "0.13.0"
   },
